--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,20 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
+#Ignore compiled javascript files.
+hgame/*.js
+hgame/*.js.map
+
+
+#Ignore some Visual Stuido generated files
+*.sdf
+*.dll
+*.pdb
+hgame/obj/
+hgame/bin/
+
+/.vs/
+
 # Windows Installer files
 *.cab
 *.msi
