--- a/hgame/hgame.csproj
+++ b/hgame/hgame.csproj
@@ -34,6 +34,11 @@
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="addons\action_bar_addon.ts" />
+    <TypeScriptCompile Include="addons\castbar_addon.ts" />
+    <TypeScriptCompile Include="addons\error_message_addon.ts" />
+    <TypeScriptCompile Include="addons\raid_frame_addon.ts" />
+    <TypeScriptCompile Include="addons\spell_effect_addon.ts" />
     <TypeScriptCompile Include="class_modules\priest.ts" />
     <TypeScriptCompile Include="data.ts" />
     <TypeScriptCompile Include="randomstuff.ts" />
