Addons are now loaded dynamically.
Created a helper class to deal with loading / registering addons to the
game. In the play state we now call game.addons.loadEnabledAddons() to
fire them up.  This lays the ground work for beeing able to
enable/disable addons in the menu as you please. Before I go any further
and start working on cleaning up the actual addon code I would like some
feedback on this commit, just to make sure it makes sense & we're all on
the same page.

--- a/hgame/hgame.csproj
+++ b/hgame/hgame.csproj
@@ -25,6 +25,7 @@
     <Content Include="graphics\ab_texture.png" />
     <Content Include="graphics\BantoBar.png" />
     <Content Include="graphics\bg.jpg" />
+    <Content Include="graphics\blue.png" />
     <Content Include="graphics\LiteStep.png" />
     <Content Include="graphics\setup_screen.png" />
     <Content Include="graphics\spell_holy_powerwordshield.jpg" />
@@ -39,6 +40,7 @@
     <TypeScriptCompile Include="addons\error_message_addon.ts" />
     <TypeScriptCompile Include="addons\raid_frame_addon.ts" />
     <TypeScriptCompile Include="addons\spell_effect_addon.ts" />
+    <TypeScriptCompile Include="addons\unit_frames_addon.ts" />
     <TypeScriptCompile Include="class_modules\priest.ts" />
     <TypeScriptCompile Include="enums.ts" />
     <TypeScriptCompile Include="gameObjects\data.ts" />
