Working on an EventManager
Moved events away from app.ts. Made createUnit() function in play state.

--- a/hgame/hgame.csproj
+++ b/hgame/hgame.csproj
@@ -109,6 +109,7 @@
     <TypeScriptSourceRoot />
     <PlatformTarget>AnyCPU</PlatformTarget>
     <Optimize>false</Optimize>
+    <TypeScriptJSXEmit>None</TypeScriptJSXEmit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <TypeScriptRemoveComments>true</TypeScriptRemoveComments>
