Mana bar works kinda
Added mana par for the player. Removed some stuff. Targetting and absorb
indication is not working. Added a dummy boss frame

--- a/hgame/hgame.csproj
+++ b/hgame/hgame.csproj
@@ -43,6 +43,7 @@
     <TypeScriptCompile Include="addons\error_frame.ts" />
     <TypeScriptCompile Include="addons\raid_frame.ts" />
     <TypeScriptCompile Include="addons\spell_effects.ts" />
+    <TypeScriptCompile Include="addons\timers.ts" />
     <TypeScriptCompile Include="addons\unit_frames.ts" />
     <TypeScriptCompile Include="gameObjects\class_modules\priest.ts" />
     <TypeScriptCompile Include="enums.ts" />
